--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,127 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/white"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/im_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:layout_alignParentRight="true"
-        android:layout_gravity="right"
-        android:layout_marginRight="15dp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:src="@drawable/close_dialog"
+        android:src="@drawable/iv_close"
         />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="200dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/holder"
-        />
-
-
-
-    <EditText
-        android:id="@+id/et_userName"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@id/logo"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="30dp"
-        android:background="@null"
-        android:gravity="center_vertical"
-        android:hint="请输入手机号"
-        android:inputType="phone"
-        android:maxLength="11"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:textColorHint="#c8c8c8"
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/et_userName"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="2dp"
-        android:background="#d0d0d0"
-        />
-    <EditText
-        android:id="@+id/et_userPwd"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@id/et_userName"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginTop="20dp"
-        android:background="@null"
-        android:gravity="center_vertical"
-        android:hint="请输入密码"
-        android:inputType="textPassword"
-        android:textColorHint="#c8c8c8"
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/et_userPwd"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="2dp"
-        android:background="#d0d0d0"
-        />
-
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/icon"/>
+    
     <TextView
-        android:id="@+id/btn_forgetPwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/et_userPwd"
-        android:layout_gravity="right"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        android:text="忘记密码？"
+        android:text="taolidai"
+        android:textAppearance="@style/TextAppear.Theme.font30_Size16"
+        android:layout_gravity="center_horizontal"/>
 
-        android:textColor="#3b9bff"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="60dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppear.Theme.font30_Size16"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="center_vertical"
+            android:text="手机号"/>
+
+        <EditText
+            android:id="@+id/et_mobile"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:hint="请输入手机号"
+            android:inputType="number"
+            android:maxLength="11"
+            android:textAppearance="@style/TextAppear.Theme.font30_Size16"
+            android:textColorHint="@color/color_hint"
+            android:layout_gravity="center_vertical"
+            />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/color_line"
+        />
+
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="40dp">
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppear.Theme.font30_Size16"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true"
+            android:text="验证码"/>
+
+        <EditText
+            android:id="@+id/et_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_toRightOf="@id/text"
+            android:hint="请输入短信验证码"
+            android:maxLength="6"
+            android:textAppearance="@style/TextAppear.Theme.font30_Size16"
+            android:textColorHint="@color/color_hint"
+            android:layout_centerVertical="true"
+            />
+        <TextView
+            android:id="@+id/tv_getcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:text="收取验证码"
+            android:layout_centerVertical="true"
+            android:textColor="#2756ec"/>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/color_line"
         />
 
     <TextView
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_confirm"
+        android:layout_width="fill_parent"
         android:layout_height="42dp"
-        android:layout_below="@id/btn_forgetPwd"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="登录"
-        android:textColor="@color/A3"
-        />
-    <TextView
-        android:id="@+id/btn_register"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_below="@id/btn_login"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:padding="10dp"
-        android:text="注册"
-        android:textColor="#475059"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textAppearance="@style/TextAppear.Theme.font30_Size16"
+        android:background="@drawable/bg_button"
+        android:textColor="#FFFFFF"
+        android:text="立即登录"
         />
-
 
 </LinearLayout>
