--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -282,10 +282,18 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
 
-    <style name="AppTheme" parent="Base.AppTheme.NoActionBar">
-        <item name="android:windowAnimationStyle">@style/Animation</item>
-        <item name="colorPrimaryDark">@color/colorAccent</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+
+    </style>
+
+    <style name="TextAppear.Theme.font30_Size16" parent="android:TextAppearance.Theme">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/font_normal</item>
     </style>
 
     <style name="TextAppear.Theme.font40_Size13" parent="android:TextAppearance.Theme">
