登录页面提交

--- a/app/src/main/res/layout/dialog_login_tip.xml
+++ b/app/src/main/res/layout/dialog_login_tip.xml
@@ -5,6 +5,7 @@
               android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/rl_bgd"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:background="@drawable/bg_button">
