--- a/app/src/main/res/drawable/bg_login_tip.xml
+++ b/app/src/main/res/drawable/bg_login_tip.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#2756ec" />
+    <solid android:color="#000000" />
 
     <stroke
         android:width="0.5dp"
-        android:color="#2756ec" />
+        android:color="#000000" />
 
     <corners android:radius="10dip" />
 
