--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,16 +8,20 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/im_close"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="left"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/iv_close"
-        />
+    <RelativeLayout
+        android:id="@+id/rl_close"
+        android:layout_width="30dp"
+        android:layout_height="30dp">
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="left"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/iv_close"
+            />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/logo"
@@ -32,20 +36,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="taolidai"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppear.Theme.font30_Size16"
         android:layout_gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="67dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppear.Theme.font30_Size16"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="10dp"
             android:layout_gravity="center_vertical"
             android:text="手机号"/>
 
@@ -56,6 +62,7 @@
             android:background="@null"
             android:hint="请输入手机号"
             android:inputType="number"
+            android:layout_marginTop="1dp"
             android:maxLength="11"
             android:textAppearance="@style/TextAppear.Theme.font30_Size16"
             android:textColorHint="@color/color_hint"
@@ -66,22 +73,24 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
         android:background="@color/color_line"
         />
 
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp">
+        android:layout_height="20dp"
+        android:layout_marginTop="14dp">
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppear.Theme.font30_Size16"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="10dp"
+            android:textStyle="bold"
             android:layout_centerVertical="true"
             android:text="验证码"/>
 
@@ -93,17 +102,20 @@
             android:layout_toRightOf="@id/text"
             android:hint="请输入短信验证码"
             android:maxLength="6"
+            android:inputType="number"
             android:textAppearance="@style/TextAppear.Theme.font30_Size16"
             android:textColorHint="@color/color_hint"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="3dp"
             />
         <TextView
             android:id="@+id/tv_getcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="28dp"
             android:text="收取验证码"
+            android:gravity="center"
+            android:textSize="16sp"
             android:layout_centerVertical="true"
             android:textColor="#2756ec"/>
     </RelativeLayout>
@@ -111,8 +123,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
         android:background="@color/color_line"
         />
 
@@ -120,10 +132,10 @@
         android:id="@+id/tv_confirm"
         android:layout_width="fill_parent"
         android:layout_height="42dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:textAppearance="@style/TextAppear.Theme.font30_Size16"
         android:background="@drawable/bg_button"
         android:textColor="#FFFFFF"
