--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:id="@+id/tab1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="44dp"
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center"
@@ -26,26 +26,19 @@
             <ImageView
                 android:id="@+id/ivTab1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="9dp"
+                android:layout_height="30dp"
+                android:src="@drawable/btn_loan_nor"
                  />
 
-            <TextView
-                android:id="@+id/tvTab1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:text="@string/home_home"
-                android:textAppearance="@style/TextAppear.Theme.A4_Size11"
-
-                />
         </LinearLayout>
+
+
+
 
         <LinearLayout
             android:id="@+id/tab2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="44dp"
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center"
@@ -54,26 +47,16 @@
             <ImageView
                 android:id="@+id/ivTab2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
+                android:layout_height="30dp"
+                android:src="@drawable/btn_bill_nor"
                  />
-
-            <TextView
-                android:id="@+id/tvTab2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:text="@string/home_mall"
-                android:textAppearance="@style/TextAppear.Theme.A4_Size11"
-
-                />
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/tab3"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="44dp"
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center"
@@ -82,72 +65,10 @@
             <ImageView
                 android:id="@+id/ivTab3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
+                android:layout_height="30dp"
+                android:src="@drawable/btn_mine_nor"
                  />
 
-            <TextView
-                android:id="@+id/tvTab3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:layout_marginTop="5dp"
-                android:text="@string/home_find"
-                android:textAppearance="@style/TextAppear.Theme.A4_Size11"
-
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/tab4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivTab4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                 />
-
-            <TextView
-                android:id="@+id/tvTab4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:layout_marginTop="5dp"
-                android:text="@string/home_class"
-                android:textAppearance="@style/TextAppear.Theme.A4_Size11" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/tab5"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivTab5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                 />
-
-            <TextView
-                android:id="@+id/tvTab5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:text="@string/home_mine"
-                android:textAppearance="@style/TextAppear.Theme.A4_Size11" />
         </LinearLayout>
 
 
