--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,5 +64,7 @@
     <color name="font_normal">#444444</color>
     <color name="color_hint">#999999</color>
     <color name="color_line">#e4e4e4</color>
+    <color name="color_title">#2a2a2a</color>
+    <color name="color_111111">#111111</color>
 
 </resources>
