--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -9,7 +9,8 @@
     <include layout="@layout/layout_title"/>
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:scrollbars="none">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -157,6 +158,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"/>
             <TextView
+                android:id="@+id/tv_apply"
                 android:layout_width="fill_parent"
                 android:layout_height="42dp"
                 android:layout_marginLeft="15dp"
