--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -158,7 +158,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"/>
             <TextView
-                android:id="@+id/tv_apply"
+                android:id="@+id/tv_confirm"
                 android:layout_width="fill_parent"
                 android:layout_height="42dp"
                 android:layout_marginLeft="15dp"
