--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,5 +70,6 @@
     <color name="color_f0f2f5">#f0f2f5</color>
     <color name="color_e4e4e2">#e4e4e2</color>
     <color name="color_f1a942">#f1a942</color>
+    <color name="color_f0f1f5">#f0f1f5</color>
 
 </resources>
