--- a/app/src/main/res/layout/fragment_mobile_phone_operators.xml
+++ b/app/src/main/res/layout/fragment_mobile_phone_operators.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/tv_tel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="13656714459"
+                android:text=""
                 android:textAppearance="@style/TextAppear.Theme.111111_Size15"
                 />
 
