--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -347,14 +347,12 @@
                     android:id="@+id/tv_confirm"
                     android:layout_width="fill_parent"
                     android:layout_height="42dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
                     android:layout_marginTop="30dp"
                     android:textSize="16sp"
                     android:textColor="#FEFEFE"
                     android:gravity="center"
                     android:text="确认借款"
-                    android:background="@drawable/bg_loan_button"/>
+                    android:background="@drawable/button_bg"/>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
