--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -161,14 +161,12 @@
                 android:id="@+id/tv_confirm"
                 android:layout_width="fill_parent"
                 android:layout_height="42dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginTop="10dp"
                 android:textSize="16sp"
                 android:textColor="#FEFEFE"
                 android:gravity="center"
                 android:text="立即申请"
-                android:background="@drawable/bg_loan_button"/>
+                android:background="@drawable/button_bg"/>
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="10dp"
