拍摄银行卡页面

--- a/app/src/main/res/layout/activity_authinfo.xml
+++ b/app/src/main/res/layout/activity_authinfo.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_title2" />
+    <include layout="@layout/layout_title_normal" />
 
 
     <com.bb.taold.widget.stepview.StepsView
