--- a/app/src/main/res/layout/activity_addcardfinal.xml
+++ b/app/src/main/res/layout/activity_addcardfinal.xml
@@ -36,6 +36,45 @@
                     android:textColor="@color/color_111111"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="15dp"
+                    android:text="持卡人"/>
+                <TextView
+                    android:id="@+id/tv_acctUser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@color/color_111111"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/iv_tip_name"
+                    android:text="David"/>
+                <ImageView
+                    android:id="@+id/iv_tip_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tip_icon"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:layout_marginRight="5dp"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="15dp"
+                android:background="@color/color_line"/>
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="49dp"
+                android:background="@color/white">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@color/color_111111"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
                     android:text="卡号"/>
                 <TextView
                     android:id="@+id/tv_acctNo"
@@ -74,9 +113,42 @@
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
-                    android:text="工商银行"/>
+                    android:text="工商银行（借记卡）"/>
             </RelativeLayout>
-
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="49dp"
+                android:background="@color/white">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@color/color_111111"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:text="手机号"/>
+                <TextView
+                    android:id="@+id/tv_acctPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@color/color_111111"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/iv_tip_phone"
+                    android:text="银行预留号码"/>
+                <ImageView
+                    android:id="@+id/iv_tip_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tip_icon"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:layout_marginRight="5dp"/>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
