--- a/app/src/main/res/layout/dialog_common.xml
+++ b/app/src/main/res/layout/dialog_common.xml
@@ -23,9 +23,11 @@
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             android:gravity="center"
+            android:layout_marginTop="13dp"
+            android:layout_marginBottom="13dp"
             android:text="text"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
