--- a/app/src/main/res/layout/layout_title_normal.xml
+++ b/app/src/main/res/layout/layout_title_normal.xml
@@ -31,7 +31,7 @@
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/tv_title_51"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:gravity="center"
