--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -37,20 +37,28 @@
 
                 <ImageView
                     android:id="@+id/iv_delete"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:src="@drawable/stop_delete_icon"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="44dp"/>
+                    android:layout_marginLeft="34dp"/>
 
                 <ImageView
                     android:id="@+id/iv_add"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@drawable/add_icon"
-                    android:layout_marginRight="44dp"/>
+                    android:layout_marginRight="34dp"/>
             </RelativeLayout>
             <View
                 android:layout_width="199dp"
@@ -70,18 +78,22 @@
                     android:textAppearance="@style/TextAppear.Theme.font40_Size14"
                     android:background="@drawable/bg_loan_text"
                     android:gravity="center"
-                    android:text="借7天"/>
+                    android:text="借7天"
+                    android:id="@+id/textView2"/>
 
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="32dp"
-                    android:layout_marginRight="64dp"
-                    android:layout_alignParentRight="true"
                     android:textSize="14sp"
                     android:textColor="#F1A942"
                     android:background="@drawable/bg_loan_text_2"
                     android:gravity="center"
-                    android:text="借14天"/>
+                    android:text="借14天"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/textView2"
+                    android:layout_toEndOf="@+id/textView2"
+                    android:layout_marginLeft="54dp"
+                    android:layout_marginStart="54dp"/>
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="fill_parent"
