--- a/app/src/main/res/layout/activity_repay.xml
+++ b/app/src/main/res/layout/activity_repay.xml
@@ -1,27 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.bb.taold.widget.SwipeListLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sll_main"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/tv_delete"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:background="#ff0000"
-            android:textSize="15sp"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:text="解除绑定" />
-    </LinearLayout>
-
+    <include layout="@layout/layout_title_normal"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -75,4 +58,32 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
-</com.bb.taold.widget.SwipeListLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppear.Theme.font111111_Size16"
+            android:textStyle="bold"
+            android:text="还款说明"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:lineSpacingExtra="10dp"
+            android:textAppearance="@style/TextAppear.Theme.111111_Size14"
+            android:text="@string/repay_info_1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppear.Theme.111111_Size14"
+            android:layout_marginTop="10dp"
+            android:lineSpacingExtra="10dp"
+            android:text="@string/repay_info_2"/>
+    </LinearLayout>
+</LinearLayout>
