--- a/app/src/main/res/layout/layout_title_normal.xml
+++ b/app/src/main/res/layout/layout_title_normal.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/title"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
     <ImageButton
@@ -39,5 +39,11 @@
         android:text="确认借款"
         android:textColor="@color/color_title"
         android:textSize="17dip" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_line"
+        android:layout_below="@id/tv_title"/>
 
 </RelativeLayout>
