--- a/app/src/main/res/layout/activity_loan_records.xml
+++ b/app/src/main/res/layout/activity_loan_records.xml
@@ -5,11 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <include layout="@layout/layout_title_normal"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_loan_records"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiper_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_loan_records"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
