--- a/app/src/main/res/layout/item_test2.xml
+++ b/app/src/main/res/layout/item_test2.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="30dp"
     android:background="@color/A1">
     <TextView
         android:id="@+id/tv_value"
